crates/strider/tests/snapshots/v3__ppc32be__calls__mid.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x100005f8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "v9" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v9" [color="#888888", style=dashed];
  "v9" -> "7" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "v10" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v10" [color="#888888", style=dashed];
  "v10" -> "7" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "v11" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v11" [color="#888888", style=dashed];
  "v11" -> "7" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "8" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "12" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "13" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "13" [label="const 0xfffffffe:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "12" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "15" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "v16" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v16" [color="#888888", style=dashed];
  "v16" -> "15" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "17" -> "15" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x1f:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "14" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "v16" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" [label="arg[6] ← r9", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "19" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "20" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "4" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "20" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0xffffffe8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "19" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "23" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "19" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "25" -> "19" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "25" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "24" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="StackStore u32\n→ ram[sp + 4]", shape=box3d, fillcolor="#20182a"];
  "27" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "23" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "29" -> "23" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "28" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "28" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "28" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "27" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "31" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "32" -> "27" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "21" -> "27" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "32" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0xffffffe0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "31" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
