crates/strider/tests/snapshots/v3__ppc32be__calls__mutual_a.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "6" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "10" -> "7" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "11" -> "7" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "12" -> "7" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "12" [label="φ f2", shape=house, fillcolor="#163030"];
  "5" -> "12" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v13" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v13" [color="#888888", style=dashed];
  "v13" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "14" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "14" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "6" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0x10000598:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" -> "6" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "18" -> "6" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "17" -> "6" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "17" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "17" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "17" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "21" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v22" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v22" -> "15" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "15" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "21" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "24" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v25" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v25" -> "21" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "26" -> "21" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "26" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "24" [label="StackStore u32\n→ ram[sp + 4]", shape=box3d, fillcolor="#20182a"];
  "27" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v28" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v28" -> "24" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "29" -> "24" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "27" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "30" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v31" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v31" -> "27" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "23" -> "27" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "30" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="φ f1", shape=house, fillcolor="#163030"];
  "5" -> "11" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v32" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v32" [color="#888888", style=dashed];
  "v32" -> "11" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "33" -> "11" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "33" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="φ r4", shape=house, fillcolor="#163030"];
  "5" -> "10" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v34" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v34" [color="#888888", style=dashed];
  "v34" -> "10" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" -> "10" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "9" [label="φ r9", shape=house, fillcolor="#163030"];
  "5" -> "9" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "35" -> "9" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "36" -> "9" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "35" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v37" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v37" [color="#888888", style=dashed];
  "v37" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="φ Mem", shape=house, fillcolor="#163030"];
  "5" -> "8" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "6" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "15" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "4" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "39" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "39" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "40" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "42" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "42" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "44" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "46" -> "45" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "45" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "46" [label="init\nxer_so", shape=Mdiamond, fillcolor="#1a3a5c"];
  "44" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "48" -> "44" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "44" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "50" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "50" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "52" -> "50" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "52" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "19" -> "52" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" -> "52" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "48" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "54" -> "48" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "48" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "56" -> "55" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "55" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "56" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "58" -> "56" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "58" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "59" -> "58" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "59" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" -> "58" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "60" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "60" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "62" -> "60" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "62" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "19" -> "62" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "63" -> "62" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
