crates/strider/tests/snapshots/v3__ppc32be__calls__mutual_b.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "6" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "10" -> "7" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "11" -> "7" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "12" -> "7" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "12" [label="φ f2", shape=house, fillcolor="#163030"];
  "5" -> "12" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v13" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v13" [color="#888888", style=dashed];
  "v13" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "14" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "14" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "6" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0x10000538:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" -> "6" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "18" -> "6" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "17" -> "6" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "17" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "17" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "17" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "21" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "15" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "15" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "22" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0xffffffe8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "21" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "25" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" -> "21" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "27" -> "21" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "26" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "26" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "26" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0xfffffffc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="StackStore u32\n→ ram[sp + 4]", shape=box3d, fillcolor="#20182a"];
  "29" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "30" -> "25" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "31" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "31" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "30" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "29" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "33" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "34" -> "29" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "23" -> "29" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "34" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0xffffffe0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="φ f1", shape=house, fillcolor="#163030"];
  "5" -> "11" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v36" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v36" [color="#888888", style=dashed];
  "v36" -> "11" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "37" -> "11" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "37" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="φ r4", shape=house, fillcolor="#163030"];
  "5" -> "10" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v38" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v38" [color="#888888", style=dashed];
  "v38" -> "10" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" -> "10" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "9" [label="φ r9", shape=house, fillcolor="#163030"];
  "5" -> "9" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "39" -> "9" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "40" -> "9" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "40" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "39" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v41" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v41" [color="#888888", style=dashed];
  "v41" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="φ Mem", shape=house, fillcolor="#163030"];
  "5" -> "8" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "6" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "15" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "4" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "43" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "43" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "44" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "44" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "46" -> "44" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "44" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "46" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "48" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "50" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "50" [label="init\nxer_so", shape=Mdiamond, fillcolor="#1a3a5c"];
  "48" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "52" -> "48" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" -> "48" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "54" -> "53" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "53" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "54" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "56" -> "54" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "56" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "19" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "52" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "58" -> "52" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "59" -> "52" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "59" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "60" -> "59" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" -> "59" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "60" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "62" -> "60" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "62" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "63" -> "62" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" -> "62" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "58" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "64" -> "58" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "65" -> "58" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "65" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "64" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "66" -> "64" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "66" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "19" -> "66" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "67" -> "66" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "67" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
